--------------------------------------------------------------------------------
drkns 30.07.2022 22:27:06 +0100 - build 6001

1. Refactoring.

2. Improve exception diagnostics.

3. Support UTF-8 in far.exe.ini.

4. Correction of 5936.

5. Correction of 5998.

--------------------------------------------------------------------------------
drkns 22.07.2022 23:55:11 +0100 - build 6000

1. Refactoring.

--------------------------------------------------------------------------------
yjh 22.07.2022 01:34:04 +0300 - build 5999

1. SQLite v3.39.2.

--------------------------------------------------------------------------------
drkns 17.07.2022 17:54:30 +0100 - build 5998

1. Continue fullwidth-aware rendering.

--------------------------------------------------------------------------------
drkns 16.07.2022 23:17:49 +0100 - build 5997

1. Continue 5996.

--------------------------------------------------------------------------------
drkns 16.07.2022 20:44:11 +0100 - build 5996

1. Files highlighting - Marking character can contain any number of characters.

--------------------------------------------------------------------------------
drkns 16.07.2022 00:16:57 +0100 - build 5995

1. Refactoring.

2. Add logger icon.

--------------------------------------------------------------------------------
yjh 14.07.2022 21:58:48 +0300 - build 5994

1. SQLite v3.39.1.

--------------------------------------------------------------------------------
drkns 13.07.2022 19:29:19 +0100 - build 5993

2. Continue fullwidth-aware rendering.

--------------------------------------------------------------------------------
drkns 11.07.2022 21:44:15 +0100 - build 5992

1. Switch to conformant preprocessor.

2. Refactoring.

3. Menu width correction.

4. Fix "use shell name" in disk menu.

--------------------------------------------------------------------------------
drkns 08.07.2022 08:39:53 +0100 - build 5991

1. Correction of 5989.2.
