@@ -4410,7 +4410,7 @@ $ #256 Color Picker#
  \80  \90  \A0  \B0  \C0  \D0  \E0  \F0  \-
 
  The next 216 colors are represented as a 6x6x6 cube. The palette usually has 6 levels for every primary color and forms a homogeneous RGB cube.
- Use the buttons on the right to rotate the cube and access its inner levels.
+ Use the buttons on the right to rotate the cube, access its inner levels or mix the primary colors directly.
 
  \(:10)  \(:11)  \(:12)  \(:13)  \(:14)  \(:15)  \-  \(:34)  \(:35)  \(:36)  \(:37)  \(:38)  \(:39)  \-  \(:58)  \(:59)  \(:5A)  \(:5B)  \(:5C)  \(:5D)  \-
  \(:16)  \(:17)  \(:18)  \(:19)  \(:1A)  \(:1B)  \-  \(:3A)  \(:3B)  \(:3C)  \(:3D)  \(:3E)  \(:3F)  \-  \(:5E)  \(:5F)  \(:60)  \(:61)  \(:62)  \(:63)  \-
