@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 01.08.2022 02:51:40 +0100 - build 6002
+
+1. Extend 256 color picker.
+
+--------------------------------------------------------------------------------
 drkns 30.07.2022 22:27:06 +0100 - build 6001
 
 1. Refactoring.
